/*
** EPITECH PROJECT, 2020
** OOP_arcade_2019
** File description:
** Event.hpp
*/

#ifndef OOP_ARCADE_2019_EVENT_HPP
#define OOP_ARCADE_2019_EVENT_HPP

namespace ecs {

class Event {
    Event() = default;
    ~Event() = default;
};

}

#endif  // OOP_ARCADE_2019_EVENT_HPP
